[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRN"
version = "0.6"
description = "Reaction Network Structure and Simulation Library for Resilience"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [
    { name = "Alejandro Bassi" },
    { name = "Fionn Daire Keogh" },
    { name = "Pedro Maldonado", email = "pmaldona@sax.cl" },
    { name = "Tomas Veloz" },
]
keywords = [
    "chemical reaction networks",
    "closed structure",
    "decomposition",
    "simulation",
    "random walk",
    "random network generator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4",
    "bitarray",
    "joblib",
    "lxml",
    "networkx",
    "numpy",
    "pandas",
    "pulp",
    "scipy",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "pyvis",
    "seaborn",
]
roadrunner = [
    "libroadrunner",
]
geometry = [
    "pypoman",
]
all = [
    "libroadrunner",
    "matplotlib",
    "pypoman",
    "pyvis",
    "seaborn",
]
dev = [
    "build",
    "pytest",
    "twine",
]

[project.urls]
Homepage = "https://github.com/pmaldona/pyRN"
Repository = "https://github.com/pmaldona/pyRN"

[tool.setuptools.packages.find]
include = ["pyRN", "pyRN.*"]
exclude = ["tests", "tests.*"]
